--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>RECIPES</h1>
+    
+    <h1>Chebureki</h1>
+
     <img src="./img/chebureki.jpg" alt="chebureki-image">
+
     <h2>Description</h2>
 
     <h3>Ingredients</h3>
@@ -38,5 +42,43 @@
         <li>Drain on paper towels, let rest for a few minutes. Serve while still hot.</li>
     </ol>
     <a href="https://www.mydeliciousmeals.com/recipe/deep-fried-beef-dumplings-chebureki">Chebureki source link</a>
+
+    <h1>Peremechki</h1>
+
+    <img src="./img/peremechki.jpg" alt="peremechi">
+
+    <h2>Description</h2>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>250 ml Water</li>
+        <li>450 gram Flour wheat / Flour</li>
+        <li>3 tablespoons vegetabe oil</li>
+        <li>1 teaspoon Salt</li>
+        <li>1 tablespoon Sugar</li>
+        <li>1 teaspoon Dry yeast</li>
+        <li>450 gram Minced meat</li>
+        <li>200 gram Onion</li>
+        <li>1 teaspoon Seasoning</li>
+        <li>Black pepper to taste</li>
+    </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+        <li>Prepare all the ingredients.</li>
+        <li>In the sifted flour, add salt, sugar, yeast, and butter. Mix thoroughly, pour water and knead the dough. It will be a little liquid and will stick to your hands a little.</li>
+        <li>We clean the onion, cut it into cubes and grind it into porridge in a blender.</li>
+        <li>Add salt, pepper, spices, and ground onion to the minced meat. Mix everything thoroughly. The minced meat turns out to be thin.</li>
+        <li>The dough was suitable for 20 minutes. We lubricate our hands with oil and knead it again (not for long). After greasing it with oil, cover it with a towel and set aside to rise for 40 minutes.</li>
+        <li>After the dough is suitable, we lubricate the work surface with oil and transfer the dough to it. It stopped sticking to my hands.</li>
+        <li>Divide the dough into 16 equal parts.</li>
+        <li>We cover all the pieces with a towel, so that they do not get winded and begin to sculpt belyashi. From the ball we make a flat pancake, spread the filling on it and fix the edges so that a small hole would remain. This is what we do with all parts of the test.</li>
+        <li>In a frying pan, pour the oil and heat it up strongly. We spread the peremech for roasting in maso with a hole in the bottom. Reduce the heat to medium heat.</li>
+        <li>Fry the belyashi on each side for 4 minutes.</li>
+        <li>We spread the belyashi on a paper towel, so that the excess oil would glass. We do this with all the whites and serve them to the table. Bon appetit.</li>
+    </ol>
+
 </body>
 </html>
